# brutalmaze

./: .gitignore  .gitmodules  MANIFEST.in  README.rst  README.tex  pyproject.toml  settings.ini  setup.py
brutalmaze/: __init__.py  characters.py  constants.py  game.py  main.py  maze.py  misc.py  settings.ini  utils.py  weapons.py
client-examples/: BrutalmazeClient.cs  hit-and-run.py
docs/: README.md  brutalma.js  example.json  index.html  style.css
